imports cleanup and a few more deps